Fixed line whitespaces

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,34 @@
 html {
     background-color: rgb(30 41 59);
 }
+
+.code-output {
+    margin-top: 16px;
+    border-radius: 8px;
+    overflow: hidden;
+}
+
+pre {
+    padding: 16px;
+    font-size: 0.875rem !important;
+    overflow-x: auto;
+}
+
+pre::-webkit-scrollbar {
+    width: 8px;
+    height: 6px;
+}
+
+pre::-webkit-scrollbar-track {
+    background-color: rgba(30 41 59 0.5);
+}
+
+pre::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 4px;
+}
+
+/* Handle on hover */
+pre::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
